--- a/app_proj_accident_code.html
+++ b/app_proj_accident_code.html
@@ -134,7 +134,7 @@
     <div id="map"></div>
 
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzdc_k93jL7NPhecRBU8E7FXYCZaxpqvI&callback=initMap">
+        src="Your API Key">
     </script>
 
 </body>
